# aws

./: .env.example  .gitignore  Dockerfile  README.md  apprunner.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
app/: database.py  main.py
app/agents/: agents.py  crew.py  tasks.py
app/api/: copilot.py
app/core/: bedrock.py
app/models/: audit.py  complaint.py
app/routers/: admin.py  admin_auth.py  complaints.py
app/schemas/: admin_auth.py  complaint.py  copilot.py
app/services/: admin_cleanup.py  auth.py  escalation.py  geocoding.py  llm_provider.py  otp_mailer.py  storage.py
app/services/understanding_agent/: __init__.py  agent.py  config.py  models.py  prompts.py
migrations/: env.py
migrations/versions/: 10e1e4241804_add_image_fields_to_complaints.py  19ad0f3b2c36_add_departments_and_escalation_logs.py  2c6fe1da5f55_add_convo_sessions_and_citizen_feedback_.py  33d205ff6f0e_add_audit_logs_table.py  4d9b1f4b7e7c_repair_missing_conversation_tables.py  6f2b8c1d4a11_add_department_admin_auth_table.py  8a1d3f2c9e74_fix_escalation_logs_id_default.py  9c7b2d1e4f6a_add_admin_otp_verification_fields.py  b00043d92dab_seed_departments.py  c0b13b0daef4_add_escalated_status_and_audit_logs_.py  e3b1c4d5f6a7_remove_mobile_fields_from_department_admins.py  f0f9a55f9301_initial_complaints_table.py  f28b89ef0539_add_new_complaint_fields.py
scripts/: send-admin-access-email.mjs  send-otp-email.mjs
