[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.41.0",
    "langchain-core>=1.2.16",
    "langchain-aws>=1.3.1",
    "langchain-openai>=1.1.10",
    "boto3>=1.42.59",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "crewai>=1.6.1",
    "apscheduler>=3.11.2",
    "pyjwt>=2.10.1",
    "bcrypt>=4.2.1",
    "email-validator>=2.2.0",
]
